--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,17 @@
 spring.application.name=lyra
 server.port=8080
 
-# Database Configuration
-spring.datasource.url=jdbc:h2:mem:lyradb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Database Configuration - Oracle
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:orcl
+spring.datasource.driverClassName=oracle.jdbc.OracleDriver
+spring.datasource.username=rm559123
+spring.datasource.password=fiap
 
 # JPA/Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
 lyra.app.jwtSecret=lyraSecretKey12345678901234567890123456789012
@@ -26,6 +25,8 @@ spring.messages.encoding=UTF-8
 # Logging
 logging.level.org.springframework.security=DEBUG
 logging.level.com.example.lyra=DEBUG
+logging.level.com.example.lyra.service.GeminiAIService=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
 
 # RabbitMQ Configuration
 spring.rabbitmq.host=localhost
@@ -37,3 +38,11 @@ spring.rabbitmq.password=guest
 rabbitmq.queue.humor=humor.queue
 rabbitmq.exchange=humor.exchange
 rabbitmq.routing.key=humor.routingkey
+
+# Gemini AI Configuration (REST API)
+gemini.api.key=AIzaSyCuipWQzEplpJrZVeWY0xaQlugChkVNonM
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
+
+# .NET API Integration
+dotnet.api.url=http://localhost:5000
+dotnet.api.timeout=10
