--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,7 @@
 # Application
 spring.application.name=lyra
 server.port=8080
-
-# Database Configuration - Oracle
-spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:orcl
-spring.datasource.driverClassName=oracle.jdbc.OracleDriver
-spring.datasource.username=rm559123
-spring.datasource.password=fiap
-
-# JPA/Hibernate
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=${ACTIVE_PROFILE:dev}
 
 # JWT
 lyra.app.jwtSecret=lyraSecretKey12345678901234567890123456789012
@@ -40,9 +29,9 @@ rabbitmq.exchange=humor.exchange
 rabbitmq.routing.key=humor.routingkey
 
 # Gemini AI Configuration (REST API)
-gemini.api.key=AIzaSyCuipWQzEplpJrZVeWY0xaQlugChkVNonM
+gemini.api.key=AIzaSyBg8nptSc8Pkw8U6rCNKmpg3yLXTe5_1t4
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
 
 # .NET API Integration
-dotnet.api.url=http://localhost:5000
+dotnet.api.url=https://cglgs2025webapp.azurewebsites.net
 dotnet.api.timeout=10
